--- a/.prettierignore
+++ b/.prettierignore
@@ -1,3 +1,30 @@
-# Ignore artifacts:
+# Artifacts
 build
 coverage
+dist
+node_modules
+
+# Config files
+*.config.js
+
+# Generated files
+.vite
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDE
+.vscode/
+.idea/
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Environment
+.env
+.env.local
+.env.*.local
