--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "fix": "npm run lint:fix && npm run format",
     "lint": "eslint src --ext .vue,.js",
     "lint:fix": "eslint src --ext .vue,.js --fix",
+    "check": "npm run lint && npm run format:check",
     "format": "prettier --write src/**/*.{js,vue}",
-    "format:check": "prettier --check src/**/*.{js,vue}"
+    "format:check": "prettier --check src/**/*.{js,vue}",
+    "pre-commit": "npm run check"
   },
   "dependencies": {
     "@primeuix/themes": "^1.2.1",
