--- a/.prettierignore
+++ b/.prettierignore
@@ -1,14 +1,9 @@
-# Artifacts
-build
-coverage
-dist
-node_modules
-
-# Config files
-*.config.js
-
-# Generated files
-.vite
+# Build artifacts
+build/
+dist/
+coverage/
+.vite/
+node_modules/
 
 # Logs
 *.log
@@ -16,15 +11,15 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# IDE
+# IDE settings
 .vscode/
 .idea/
 
-# OS
+# OS metadata
 .DS_Store
 Thumbs.db
 
-# Environment
+# Environment variables
 .env
 .env.local
 .env.*.local
