feat: add build and clean scripts to package.json for improved development workflow

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "clean": "rm -rf dist node_modules/.vite",
+    "build:prod": "npm run check && npm run build",
+    "dev:clean": "npm run clean && npm install && npm run dev",
     "fix": "npm run lint:fix && npm run format",
     "lint": "eslint src --ext .vue,.js",
     "lint:fix": "eslint src --ext .vue,.js --fix",
